--- a/netlify.toml
+++ b/netlify.toml
@@ -3,16 +3,7 @@
 # -------------------------------
 [[redirects]]
 from = "/api/*"
-to = "http://34.47.190.236/:splat"
-status = 200
-force = true
-
-# -------------------------------
-# Analytics backend
-# -------------------------------
-[[redirects]]
-from = "/hls/*"
-to = "http://34.47.190.236/hls/:splat"
+to = "http://34.93.226.233/:splat"
 status = 200
 force = true
 
@@ -21,7 +12,16 @@ force = true
 # -------------------------------
 [[redirects]]
 from = "/hls/*"
-to = "http://34.47.190.236/hls/:splat"
+to = "http://34.93.226.233/hls/:splat"
+status = 200
+force = true
+
+# -------------------------------
+# Buffer / Replay (Streaming VM)
+# -------------------------------
+[[redirects]]
+from = "/buffer/*"
+to = "http://34.93.226.233/buffer/:splat"
 status = 200
 force = true
 
